feat: init turkce

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,115 +1,6 @@
 {
     "hello_world": "Hello world",
     "go_back_to_home": "Go back to home page",
-    "admin:create_estimation_quiz:btn_title": "Create estimation quiz",
-    "admin:create_estimation_quiz:start_date": "Start date",
-    "admin:create_estimation_quiz:set_start_date": "Set Start date",
-    "admin:create_estimation_quiz:end_date": "End date",
-    "admin:create_estimation_quiz:title": "Title",
-    "admin:create_estimation_quiz:validator:title": "Title is required",
-    "admin:create_estimation_quiz:question_title": "Question title",
-    "admin:create_estimation_quiz:validator:question_title": "Question title is required",
-    "admin:create_estimation_quiz:question_description": "Question description",
-    "admin:create_estimation_quiz:validator:question_description": "Question description is required",
-    "admin:create_estimation_quiz:hint_text": "Hint",
-    "admin:create_estimation_quiz:hint_dialog:title": "Hint",
-    "admin:create_estimation_quiz:validator:hint_text": "Hint is required",
-    "admin:create_estimation_quiz:correct_answer_value": "Correct answer",
-    "admin:create_estimation_quiz:validator:correct_answer_value": "Correct answer is required",
-    "admin:create_estimation_quiz:correct_answer_description": "Answer description",
-    "admin:create_estimation_quiz:validator:correct_answer_description": "Answer description is required",
-    "admin:create_estimation_quiz:min_accepted_value": "Min accepted value",
-    "admin:create_estimation_quiz:validator:min_accepted_value": "Min accepted value is required",
-    "admin:create_estimation_quiz:max_accepted_value": "Max accepted value",
-    "admin:create_estimation_quiz:validator:max_accepted_value": "Max accepted value is required",
-    "admin:create_estimation_quiz:answer_round_duration": "Answer round duration (in seconds)",
-    "admin:create_estimation_quiz:validator:answer_round_duration": "Answer round duration is required",
-    "admin:create_estimation_quiz:create_btn_title": "Create",
-    "admin:create_estimation_quiz:update_btn_title": "Update",
-    "admin:create_multi_quiz:validator:hint_text": "Hint is required",
-    "admin:create_multi_quiz:validator:correct_answer_description": "Answer description is required",
-    "admin:create_multi_quiz:title": "Title",
-    "admin:create_multi_quiz:question_title": "Question title",
-    "admin:create_multi_quiz:question_description": "Question description",
-    "admin:create_multi_quiz:hint_text": "Hint",
-    "admin:create_multi_quiz:correct_answer_description": "Answer description",
-    "admin:create_multi_quiz:answer_round_duration": "Answer round duration (in seconds)",
-    "admin:create_multi_quiz:create_btn_title": "Create",
-    "admin:create_multi_quiz:update_btn_title": "Update",
-    "admin:create_multi_quiz:start_date": "Start date",
-    "admin:create_multi_quiz:end_date": "End date",
-    "admin:create_multi_quiz:validator:title": "Title is required",
-    "admin:create_multi_quiz:validator:question_title": "Question title is required",
-    "admin:create_multi_quiz:validator:question_description": "Question description is required",
-    "admin:create_multi_quiz:validator:answer_round_duration": "Answer round duration is required",
-    "admin:create_multi_quiz:validator:choices": "At least one choice is required",
-    "admin:create_multi_quiz:validator:choice_title": "Choice title is required",
-    "admin:create_multi_quiz:choices_title": "Choices",
-    "admin:create_multi_quiz:add_choice_btn_title": "Add choice",
-    "admin:create_multi_quiz:clear_choices_btn_title": "Clear",
-    "admin:create_multi_quiz:choice_title": "Choice title",
-    "admin:create_multi_quiz:choices_correct": "Correct",
-    "admin:create_multi_quiz:choices_not_correct": "Not correct",
-    "admin:quizzes_calendar:estimation_item_title": "Estimation quiz at {}",
-    "admin:quizzes_calendar:multi_item_title": "Multi quiz at {}",
-    "admin:quizzes_calendar:quiz_create:estimation": "Create Estimation quiz",
-    "admin:quizzes_calendar:quiz_create:multi": "Create Multi quiz",
-    "admin:quizzes_calendar:quiz_update:estimation": "Update Estimation quiz",
-    "admin:quizzes_calendar:quiz_update:multi": "Update Multi quiz",
-    "admin:quizzes_calendar:quiz_delete:estimation": "Delete Estimation quiz",
-    "admin:quizzes_calendar:quiz_delete:multi": "Delete Multi quiz",
-    "admin:quizzes_calendar:quiz_view:estimation": "[User View] estimation quiz",
-    "admin:quizzes_calendar:quiz_view:multi": "[User View] multi quiz",
-    "admin:statistics:nav_btn_title": "Statistics",
-    "home:quiz_loading_error": "There was an error loading today's quiz, please try again later",
-    "home:user_points": "{} Points",
-    "home:already_entered_quiz_dialog:text": "You have already completed today’s quiz. Please come back tomorrow.",
-    "home:already_entered_quiz_dialog:close_btn": "Ok",
-    "home:daily_quizzes_title": "Daily Challenges",
-    "estimation_quiz:btn_title": "Estimation",
-    "estimation_quiz:submit_quiz": "Submit",
-    "estimation_quiz:answer_is_required": "Answer is required",
-    "estimation_quiz:answer_is_not_a_number": "Answer must be a number",
-    "estimation_quiz:get_a_hint_btn": "Get a hint",
-    "estimation_quiz:hint_dialog_title": "Hint",
-    "estimation_quiz:close_hint_btn": "Close",
-    "estimation_quiz:show_hint:warning_title": "Showing a hint will lose you half of your points, do you want to continue?",
-    "estimation_quiz:show_hint:ok_btn": "Yes",
-    "estimation_quiz:show_hint:cancel_btn": "No",
-    "estimation_quiz:submission:error_while_submitting": "There was an error while submitting your answer, please try again later",
-    "estimation_quiz:submission:line_rep:your_answer": "Your answer",
-    "estimation_quiz:submission:line_rep:the_actual_answer": "The actual answer",
-    "estimation_quiz:submission:line_rep:min_answer": "The actual answer",
-    "estimation_quiz:submission:line_rep:max_answer": "The actual answer",
-    "estimation_quiz:submission:the_actual_answer_is": "The actual answer is <bold><underline>{}</underline></bold>",
-    "estimation_quiz:submission:you_earned_points": "You earned <bold>{}/{} points</bold>",
-    "estimation_quiz:submission:how_to_solve": "How to solve",
-    "estimation_quiz:submission:close": "Close",
-    "estimation_quiz:exit:warning_title": "Exit quiz",
-    "estimation_quiz:exit:warning_desc": "If you exit the quiz you will not earn any points, and not be able to enter again for today, do you want to continue?",
-    "estimation_quiz:exit:ok_btn": "Yes",
-    "estimation_quiz:exit:cancel_btn": "No",
-    "multi_quiz:btn_title": "Multiple choice",
-    "multi_quiz:show_hint:warning_title": "Showing a hint will cose you half of your points, do you want to continue?",
-    "multi_quiz:show_hint:ok_btn": "Yes",
-    "multi_quiz:show_hint:cancel_btn": "No",
-    "multi_quiz:exit:warning_title": "Exit quiz",
-    "multi_quiz:exit:warning_desc": "If you exit the quiz you will not earn any points, and not be able to enter again for today, do you want to continue?",
-    "multi_quiz:exit:ok_btn": "Yes",
-    "multi_quiz:exit:cancel_btn": "No",
-    "multi_quiz:submission:error_while_submitting": "There was an error while submitting your answer, please try again later",
-    "multi_quiz:get_a_hint_btn": "Get a hint",
-    "multi_quiz:hint_dialog_title": "Hint",
-    "multi_quiz:close_hint_btn": "Close",
-    "multi_quiz:submit_quiz": "Submit",
-    "multi_quiz:submission:correct_answer": "<bold><underline>Correct Answer</underline></bold> <CheckIcon />",
-    "multi_quiz:submission:incorrect_answer": "<bold><underline>Incorrect Answer</underline></bold> <CrossIcon />",
-    "multi_quiz:submission:you_earned_points": "You earned <bold>{}/{} points</bold>",
-    "multi_quiz:submission:earned_points_explanation:base_points": "Base points",
-    "multi_quiz:submission:earned_points_explanation:time_multiplier": "Time multiplier",
-    "multi_quiz:submission:earned_points_explanation:hint_multiplier": "Hint multiplier",
-    "multi_quiz:submission:how_to_solve": "How to solve",
-    "multi_quiz:submission:close": "Close",
     "auth:login:title": "Log in",
     "auth:login:email": "Email",
     "auth:login:email_link_sent": "Email link sent has been sent to {}, please check your email",
@@ -156,7 +47,6 @@
     "auth:signup:signup_use_link_btn": "Sign up with link",
     "auth:signup:signup_use_pass_btn": "Sign up with password",
     "auth:signup:email_link_sent": "Email link sent has been sent to {}, please check your email",
-    "auth:signup:confirm_email_marketing": "I would like to receive promotional emails from Arithmatrix",
     "auth:signup:validator:null:email": "Email is required",
     "auth:signup:validator:invalid:email": "Email is invalid",
     "auth:signup:validator:invalid:password": "Password should be at least 6 characters long",
@@ -177,16 +67,6 @@
     "auth:signup:validator:invalid:fullname": "Full name should be at least 3 characters long",
     "auth:signup:validator:empty:country_code": "Country code is required",
     "image_picker_widget:default_hint": "Click to select an image",
-    "auth:delete_account:title": "We need to know it's really you, so we can delete your account",
-    "auth:delete_account:mode_link:subtitle": "We will send you a link to your email to reauthenticate",
-    "auth:delete_account:mode_link:sending_email_link": "Sending email link",
-    "auth:delete_account:mode_link:email_link_sent": "Email link sent has been sent to {}, please check your email",
-    "auth:delete_account:mode_link:confirm_message": "Your email has been confirmed, are you sure you want to delete your account?",
-    "auth:delete_account:mode_link:confirm_btn": "Yes, delete my account",
-    "auth:delete_account:mode_link:cancel_btn": "No, keep my account",
-    "auth:delete_account:mode_pass:subtitle": "Please enter your password to reauthenticate",
-    "auth:delete_account:mode_pass:delete_btn": "Delete my account",
-    "auth:delete_account:mode_pass:cancel_btn": "Cancel",
     "widgets:send_link_btn:unsendable_seconds": "{} seconds left",
     "bottom_bar_items:home": "Home",
     "bottom_bar_items:profile": "Profile",
@@ -209,16 +89,6 @@
     "edit_profile:validator:username-already-in-use": "Username already in use",
     "edit_profile:validator:unknownerror": "There was an error while saving, please try again later",
     "edit_profile:succesfully_saved": "Profile saved successfully",
-    "edit_profile:confirm_email_marketing": "I would like to receive promotional emails from Arithmatrix",
     "no_connection:subtitle": "No internet connection. Make sure that Wi-fi or mobile data is turned on, then try again.",
-    "no_connection:retry_btn": "Retry",
-    "intro:page1:title": "Estimation",
-    "intro:page1:desc": "Evaluate daily estimation problems to practice critical thinking skills and making reasonable assumptions",
-    "intro:page2:title": "Multiple Choice",
-    "intro:page2:desc": "Solve daily multiple choice problems and develop your number sense",
-    "intro:page3:title": "Have Fun!",
-    "intro:page3:desc": "Have fun while learning and improving your math skills",
-    "intro:next_btn:title": "Next",
-    "intro:finish_btn:title": "Get Started",
-    "intro:skip_btn:title": "Skip"
+    "no_connection:retry_btn": "Retry"
 }
