feat: sign up fields

--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -59,11 +59,27 @@
     "auth:signup:fields:password:title": "Şifre",
     "auth:signup:fields:username:title": "Kullanıcı adı",
     "auth:signup:fields:fullname:title": "Ad Soyad",
-    "auth:signup:fields:birthdate:title": "Doğum tarihi (isteğe bağlı)",
-    "auth:signup:fields:phone:title": "Telefon numarası (isteğe bağlı)",
+    "auth:signup:fields:birthdate:title": "Doğum tarihi",
+    "auth:signup:fields:phone:title": "Telefon numarası",
+    "auth:signup:fields:bloodgroup:title": "Kan grubu",
+    "auth:signup:fields:idnumber:title": "TC Kimlik No",
+    "auth:signup:fields:relativephone:title": "Yakınının telefon numarası",
+    "auth:signup:fields:relativetype:title": "Yakınlık derecesi",
+    "auth:signup:fields:peopleatsameaddress:title": "Aynı adreste yaşayan kişi sayısı",
+    "auth:signup:fields:address:title": "Adres",
+    "auth:signup:fields:diseases:title": "Hastalıklar",
+    "auth:signup:fields:medicines:title": "Kullandığınız ilaçlar",
+    "auth:signup:fields:buildingage:title": "Bina yaşı",
+    "auth:signup:fields:buildingdurability:title": "Bina dayanıklılığı",
     "auth:signup:validator:invalid:username": "Kullanıcı adı 3 - 20 karakter uzunluğunda olmalıdır ve yalnızca harfler, rakamlar içerebilir ve bir harfle başlamalıdır",
     "auth:signup:validator:invalid:fullname": "Ad Soyad en az 3 karakter uzunluğunda olmalıdır",
     "auth:signup:validator:empty:country_code": "Ülke kodu zorunludur",
+    "auth:signup:validator:invalid:blood_group": "Kan grubu geçersiz",
+    "auth:signup:validator:invalid:id_number": "Kimlik numarası geçersiz",
+    "auth:signup:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "auth:signup:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
+    "auth:signup:validator:invalid:address": "Adres geçersiz",
+    "auth:signup:validator:invalid:building_age": "Bina yaşı geçersiz",
     "image_picker_widget:default_hint": "Resim seçmek için tıklayın",
     "widgets:send_link_btn:unsendable_seconds": "{} saniye kaldı",
     "bottom_bar_items:home": "Anasayfa",
@@ -88,5 +104,25 @@
     "edit_profile:validator:unknownerror": "Kaydetme sırasında bir hata oluştu, lütfen daha sonra tekrar deneyin",
     "edit_profile:succesfully_saved": "Profil başarıyla kaydedildi",
     "no_connection:subtitle": "İnternet bağlantısı yok. Wi-fi veya mobil verinin açık olduğundan emin olun, ardından tekrar deneyin.",
-    "no_connection:retry_btn": "Tekrar dene"
+    "no_connection:retry_btn": "Tekrar dene",
+    "BloodGroup.zeroPositive": "0 Rh+",
+    "BloodGroup.zeroNegative": "0 Rh-",
+    "BloodGroup.aPositive": "A Rh+",
+    "BloodGroup.aNegative": "A Rh-",
+    "BloodGroup.bPositive": "B Rh+",
+    "BloodGroup.bNegative": "B Rh-",
+    "BloodGroup.abPositive": "AB Rh+",
+    "BloodGroup.abNegative": "AB Rh-",
+    "RelativeType.mother": "Anne",
+    "RelativeType.father": "Baba",
+    "RelativeType.sibling": "Kardeş",
+    "RelativeType.spouse": "Eş",
+    "RelativeType.kid": "Çocuk",
+    "RelativeType.grandchild": "Torun",
+    "RelativeType.grandmother": "Büyükanne",
+    "RelativeType.grandfather": "Büyükbaba",
+    "RelativeType.aunt": "Hala / Teyze",
+    "RelativeType.uncle": "Amca / Dayı",
+    "RelativeType.cousin": "Kuzen",
+    "RelativeType.other": "Diğer"
 }
