feat: edit profile fields

--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -95,10 +95,27 @@
     "edit_profile:fields:fullname:title": "Ad Soyad",
     "edit_profile:fields:birthdate:title": "Doğum tarihi",
     "edit_profile:fields:phone:title": "Telefon numarası",
+    "edit_profile:fields:bloodgroup:title": "Kan grubu",
+    "edit_profile:fields:idnumber:title": "TC Kimlik No",
+    "edit_profile:fields:relativephone:title": "Yakınının telefon numarası",
+    "edit_profile:fields:relativetype:title": "Yakınlık derecesi",
+    "edit_profile:fields:peopleatsameaddress:title": "Aynı adreste yaşayan kişi sayısı",
+    "edit_profile:fields:address:title": "Adres",
+    "edit_profile:fields:diseases:title": "Hastalıklar",
+    "edit_profile:fields:medicines:title": "Kullandığınız ilaçlar",
+    "edit_profile:fields:buildingage:title": "Bina yaşı",
+    "edit_profile:fields:buildingdurability:title": "Bina dayanıklılığı",
     "edit_profile:submit_btn": "Kaydet",
     "edit_profile:validator:invalid:username": "Kullanıcı adı 3 - 20 karakter uzunluğunda olmalıdır ve yalnızca harfler, rakamlar içerebilir ve bir harfle başlamalıdır",
     "edit_profile:validator:invalid:fullname": "Ad Soyad en az 3 karakter uzunluğunda olmalıdır",
     "edit_profile:validator:invalid:phone": "Telefon numarası 6 - 20 karakter uzunluğunda olmalıdır ve yalnızca rakamlar içerebilir",
+    "edit_profile:validator:invalid:birth_date": "Doğum tarihi geçersiz",
+    "edit_profile:validator:invalid:blood_group": "Kan grubu geçersiz",
+    "edit_profile:validator:invalid:id_number": "Kimlik numarası geçersiz",
+    "edit_profile:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "edit_profile:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
+    "edit_profile:validator:invalid:address": "Adres geçersiz",
+    "edit_profile:validator:invalid:building_age": "Bina yaşı geçersiz",
     "edit_profile:validator:empty:country_code": "Ülke kodu zorunludur",
     "edit_profile:validator:username-already-in-use": "Kullanıcı adı zaten kullanımda",
     "edit_profile:validator:unknownerror": "Kaydetme sırasında bir hata oluştu, lütfen daha sonra tekrar deneyin",
