feat: add all pages to bottom bar

--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -83,7 +83,8 @@
     "auth:signup:validator:invalid:building_age": "Bina yaşı geçersiz",
     "image_picker_widget:default_hint": "Resim seçmek için tıklayın",
     "widgets:send_link_btn:unsendable_seconds": "{} saniye kaldı",
-    "bottom_bar_items:home": "Anasayfa",
+    "bottom_bar_items:devices": "Cihazlarım",
+    "bottom_bar_items:education_videos": "Eğitim videoları",
     "bottom_bar_items:profile": "Profil",
     "profile_items:edit_profile": "Profili düzenle",
     "profile_items:privacy_policy": "Gizlilik politikası",
