--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,94 +1,147 @@
 {
-    "hello_world": "Hello world",
-    "go_back_to_home": "Go back to home page",
-    "auth:login:title": "Log in",
-    "auth:login:email": "Email",
-    "auth:login:email_link_sent": "Email link sent has been sent to {}, please check your email",
-    "auth:login:validator:null:email": "Email is required",
-    "auth:login:validator:invalid:email": "Email is invalid",
-    "auth:login:validator:invalid:password": "Password should be at least 6 characters long",
-    "auth:login:validator:user-not-found": "User not found",
-    "auth:login:validator:wrong-password": "Incorrect password",
-    "auth:login:validator:invalid-email": "Email is invalid",
-    "auth:login:validator:user-disabled": "User is disabled",
-    "auth:login:validator:expired-action-code": "The action code has expired",
-    "auth:login:validator:invalid-action-code": "The action code has expired",
-    "auth:login:validator:unknownerror": "There was an error while logging in, please try again later",
-    "auth:login:validator:emailnotfound": "The email address is not registered, please sign up",
-    "auth:login:password": "Password",
-    "auth:login:null:password": "Password is required",
-    "auth:login:send_link_btn": "Send login Link",
-    "auth:login:login_btn": "Log in",
-    "auth:login:send_link_btn:unsendable_seconds": "{} seconds left for resend",
-    "auth:login:login_use_link_btn": "Log in with link",
-    "auth:login:login_use_pass_btn": "Log in with password",
-    "auth:login:login_link_sent": "Login link sent has been sent to {}, please check your email",
-    "auth:login:dont_have_an_account:text_part": "Don't have an account? -",
-    "auth:login:dont_have_an_account:button_part": "Sign up",
-    "auth:login:forgot_password": "Forgot password?",
-    "auth:login:fields:email:title": "Email",
-    "auth:login:fields:password:title": "Password",
-    "auth:forgot_pass:title": "Reset password",
-    "auth:forgot_pass:fields:email:title": "Email",
-    "auth:forgot_pass:validator:null:email": "Email is required",
-    "auth:forgot_pass:validator:invalid:email": "Email is invalid",
-    "auth:forgot_pass:send_link_btn": "Send reset password Link",
-    "auth:forgot_pass:send_link_btn:unsendable_seconds": "{} seconds left for resend",
-    "auth:forgot_pass:email_link_sent": "Instructions to reset your password has been sent to {}, please check your email",
-    "auth:forgot_pass:validator:invalid-email": "Email is invalid",
-    "auth:forgot_pass:validator:user-not-found": "User not found",
-    "auth:forgot_pass:validator:unknownerror": "There was an error while logging in, please try again later",
-    "auth:logout:logout_btn": "Log out",
-    "auth:logout:delete_account": "Delete account",
-    "auth:signup:title": "Sign up",
-    "auth:signup:signup_btn": "Sign up",
-    "auth:signup:send_link_btn": "Send signup Link",
-    "auth:signup:send_link_btn:unsendable_seconds": "{} seconds left for resend",
-    "auth:signup:signup_use_link_btn": "Sign up with link",
-    "auth:signup:signup_use_pass_btn": "Sign up with password",
-    "auth:signup:email_link_sent": "Email link sent has been sent to {}, please check your email",
-    "auth:signup:validator:null:email": "Email is required",
-    "auth:signup:validator:invalid:email": "Email is invalid",
-    "auth:signup:validator:invalid:password": "Password should be at least 6 characters long",
-    "auth:signup:validator:unknownerror": "There was an error while logging in, please try again later",
-    "auth:signup:validator:weak-password": "Password should be at least 6 characters long",
-    "auth:signup:validator:email-already-in-use": "Email already in use",
-    "auth:signup:validator:invalid-email": "Email is invalid",
-    "auth:signup:validator:username-already-in-use": "Username already in use",
-    "auth:signup:validator:emailexists": "Email already in use",
-    "auth:signup:validator:invalid:phone": "Phone number should be 6 - 20 characters long, and can only contain numbers",
-    "auth:signup:fields:email:title": "Email",
-    "auth:signup:fields:password:title": "Password",
-    "auth:signup:fields:username:title": "Username",
-    "auth:signup:fields:fullname:title": "Full name",
-    "auth:signup:fields:birthdate:title": "Birthdate (optional)",
-    "auth:signup:fields:phone:title": "Phone number (optional)",
-    "auth:signup:validator:invalid:username": "Username should be 3 - 20 characters long, and can only contain letters, numbers, and has to start with a letter",
-    "auth:signup:validator:invalid:fullname": "Full name should be at least 3 characters long",
-    "auth:signup:validator:empty:country_code": "Country code is required",
-    "image_picker_widget:default_hint": "Click to select an image",
-    "widgets:send_link_btn:unsendable_seconds": "{} seconds left",
-    "bottom_bar_items:home": "Home",
-    "bottom_bar_items:profile": "Profile",
-    "profile_items:edit_profile": "Edit profile",
-    "profile_items:privacy_policy": "Privacy policy",
-    "profile_items:logout": "Log out",
-    "profile_items:delete_account": "Delete account",
-    "privacy_policy:title": "Privacy policy",
-    "err_widget:error_occured": "An unknown error has occured, please try again later",
-    "edit_profile:title": "Edit profile",
-    "edit_profile:fields:username:title": "Username",
-    "edit_profile:fields:fullname:title": "Full name",
-    "edit_profile:fields:birthdate:title": "Birthdate",
-    "edit_profile:fields:phone:title": "Phone number",
-    "edit_profile:submit_btn": "Save",
-    "edit_profile:validator:invalid:username": "Username should be 3 - 20 characters long, and can only contain letters, numbers, and has to start with a letter",
-    "edit_profile:validator:invalid:fullname": "Full name should be at least 3 characters long",
-    "edit_profile:validator:invalid:phone": "Phone number should be 6 - 20 characters long, and can only contain numbers",
-    "edit_profile:validator:empty:country_code": "Country code is required",
-    "edit_profile:validator:username-already-in-use": "Username already in use",
-    "edit_profile:validator:unknownerror": "There was an error while saving, please try again later",
-    "edit_profile:succesfully_saved": "Profile saved successfully",
-    "no_connection:subtitle": "No internet connection. Make sure that Wi-fi or mobile data is turned on, then try again.",
-    "no_connection:retry_btn": "Retry"
+    "hello_world": "Merhaba Dünya",
+    "go_back_to_home": "Ana sayfaya dön",
+    "auth:login:title": "Giriş yap",
+    "auth:login:email": "E-posta",
+    "auth:login:email_link_sent": "E-posta bağlantısı {} adresine gönderildi, lütfen e-postanızı kontrol edin",
+    "auth:login:validator:null:email": "E-posta zorunludur",
+    "auth:login:validator:invalid-email": "E-posta geçersiz",
+    "auth:login:validator:user-not-found": "Kullanıcı bulunamadı",
+    "auth:login:validator:wrong-password": "Geçersiz şifre",
+    "auth:login:validator:user-disabled": "Kullanıcı devre dışı",
+    "auth:login:validator:expired-action-code": "Eylem kodu süresi doldu",
+    "auth:login:validator:invalid-action-code": "Eylem kodu süresi doldu",
+    "auth:login:validator:unknownerror": "Giriş yapılırken bir hata oluştu, lütfen daha sonra tekrar deneyin",
+    "auth:login:validator:emailnotfound": "E-posta adresi kayıtlı değil, lütfen kaydolun",
+    "auth:login:password": "Şifre",
+    "auth:login:null:password": "Şifre zorunludur",
+    "auth:login:send_link_btn": "Giriş bağlantısı gönder",
+    "auth:login:login_btn": "Giriş yap",
+    "auth:login:send_link_btn:unsendable_seconds": "{} saniye sonra yeniden gönderilebilir",
+    "auth:login:login_use_link_btn": "Bağlantı ile giriş yap",
+    "auth:login:login_use_pass_btn": "Şifre ile giriş yap",
+    "auth:login:login_link_sent": "Giriş bağlantısı {} adresine gönderildi, lütfen e-postanızı kontrol edin",
+    "auth:login:dont_have_an_account:text_part": "Hesabınız yok mu? -",
+    "auth:login:dont_have_an_account:button_part": "Kaydol",
+    "auth:login:forgot_password": "Şifrenizi mi unuttunuz?",
+    "auth:login:fields:email:title": "E-posta",
+    "auth:login:fields:password:title": "Şifre",
+    "auth:forgot_pass:title": "Şifreyi sıfırla",
+    "auth:forgot_pass:fields:email:title": "E-posta",
+    "auth:forgot_pass:validator:null:email": "E-posta zorunludur",
+    "auth:forgot_pass:validator:invalid:email": "E-posta geçersiz",
+    "auth:forgot_pass:send_link_btn": "Şifre sıfırlama bağlantısı gönder",
+    "auth:forgot_pass:send_link_btn:unsendable_seconds": "{} saniye sonra yeniden gönderilebilir",
+    "auth:forgot_pass:email_link_sent": "Şifrenizi sıfırlamak için talimatlar {} adresine gönderildi, lütfen e-postanızı kontrol edin",
+    "auth:forgot_pass:validator:invalid-email": "E-posta geçersiz",
+    "auth:forgot_pass:validator:user-not-found": "Kullanıcı bulunamadı",
+    "auth:forgot_pass:validator:unknownerror": "Giriş yapılırken bir hata oluştu, lütfen daha sonra tekrar deneyin",
+    "auth:logout:logout_btn": "Çıkış yap",
+    "auth:logout:delete_account": "Hesabı sil",
+    "auth:signup:title": "Kaydol",
+    "auth:signup:signup_btn": "Kaydol",
+    "auth:signup:send_link_btn": "Kayıt bağlantısı gönder",
+    "auth:signup:send_link_btn:unsendable_seconds": "{} saniye sonra yeniden gönderilebilir",
+    "auth:signup:signup_use_link_btn": "Bağlantı ile kaydol",
+    "auth:signup:signup_use_pass_btn": "Şifre ile kaydol",
+    "auth:signup:email_link_sent": "E-posta bağlantısı {} adresine gönderildi, lütfen e-postanızı kontrol edin",
+    "auth:signup:validator:null:email": "E-posta zorunludur",
+    "auth:signup:validator:invalid:email": "E-posta geçersiz",
+    "auth:signup:validator:invalid:password": "Şifre en az 6 karakter uzunluğunda olmalıdır",
+    "auth:signup:validator:invalid:birth_date": "Doğum tarihi geçersiz",
+    "auth:signup:validator:unknownerror": "Giriş yapılırken bir hata oluştu, lütfen daha sonra tekrar deneyin",
+    "auth:signup:validator:weak-password": "Şifre en az 6 karakter uzunluğunda olmalıdır",
+    "auth:signup:validator:email-already-in-use": "E-posta zaten kullanımda",
+    "auth:signup:validator:invalid-email": "E-posta geçersiz",
+    "auth:signup:validator:username-already-in-use": "Kullanıcı adı zaten kullanımda",
+    "auth:signup:validator:emailexists": "E-posta zaten kullanımda",
+    "auth:signup:validator:invalid:phone": "Telefon numarası 6 - 20 karakter uzunluğunda olmalıdır ve yalnızca rakamlar içerebilir",
+    "auth:signup:fields:email:title": "E-posta",
+    "auth:signup:fields:password:title": "Şifre",
+    "auth:signup:fields:username:title": "Kullanıcı adı",
+    "auth:signup:fields:fullname:title": "Yakınınızın Ad Soyad",
+    "auth:signup:fields:birthdate:title": "Yakınınızın Doğum tarihi",
+    "auth:signup:fields:phone:title": "Telefon numarası",
+    "auth:signup:fields:bloodgroup:title": "Yakınınızın Kan grubu",
+    "auth:signup:fields:idnumber:title": "Yakınınızın TC Kimlik No",
+    "auth:signup:fields:relativephone:title": "Yakınınızın telefon numarası",
+    "auth:signup:fields:relativetype:title": "Yakınlık derecesi",
+    "auth:signup:fields:peopleatsameaddress:title": "Aynı adreste yaşayan kişi sayısı",
+    "auth:signup:fields:address:title": "Adres",
+    "auth:signup:fields:diseases:title": "Hastalıklar",
+    "auth:signup:fields:medicines:title": "Kullandığınız ilaçlar",
+    "auth:signup:fields:buildingage:title": "Bina yaşı",
+    "auth:signup:fields:buildingdurability:title": "Bina dayanıklılığı",
+    "auth:signup:validator:invalid:username": "Kullanıcı adı 3 - 20 karakter uzunluğunda olmalıdır ve yalnızca harfler, rakamlar içerebilir ve bir harfle başlamalıdır",
+    "auth:signup:validator:invalid:fullname": "Ad Soyad en az 3 karakter uzunluğunda olmalıdır",
+    "auth:signup:validator:empty:country_code": "Ülke kodu zorunludur",
+    "auth:signup:validator:invalid:blood_group": "Kan grubu geçersiz",
+    "auth:signup:validator:invalid:id_number": "Kimlik numarası geçersiz",
+    "auth:signup:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "auth:signup:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
+    "auth:signup:validator:invalid:address": "Adres geçersiz",
+    "auth:signup:validator:invalid:building_age": "Bina yaşı geçersiz",
+    "image_picker_widget:default_hint": "Resim seçmek için tıklayın",
+    "widgets:send_link_btn:unsendable_seconds": "{} saniye kaldı",
+    "bottom_bar_items:devices": "Cihazlarım",
+    "bottom_bar_items:education_videos": "Eğitim videoları",
+    "bottom_bar_items:profile": "Profil",
+    "profile_items:edit_profile": "Profili düzenle",
+    "profile_items:privacy_policy": "Gizlilik politikası",
+    "profile_items:logout": "Çıkış yap",
+    "profile_items:delete_account": "Hesabı sil",
+    "privacy_policy:title": "Gizlilik politikası",
+    "err_widget:error_occured": "Bilinmeyen bir hata oluştu, lütfen daha sonra tekrar deneyin",
+    "edit_profile:title": "Profili düzenle",
+    "edit_profile:fields:username:title": "Kullanıcı adı",
+    "edit_profile:fields:fullname:title": "Yakınınızın Adı Soyadı",
+    "edit_profile:fields:birthdate:title": "Yakınınızın Doğum tarihi",
+    "edit_profile:fields:phone:title": "Telefon numarası",
+    "edit_profile:fields:bloodgroup:title": "Yakınınızın Kan grubu",
+    "edit_profile:fields:idnumber:title": "Yakınınızın TC Kimlik No",
+    "edit_profile:fields:relativephone:title": "Yakınınızın telefon numarası",
+    "edit_profile:fields:relativetype:title": "Yakınlık derecesi",
+    "edit_profile:fields:peopleatsameaddress:title": "Aynı adreste yaşayan kişi sayısı",
+    "edit_profile:fields:address:title": "Adres",
+    "edit_profile:fields:diseases:title": "Hastalıklar",
+    "edit_profile:fields:medicines:title": "Kullandığınız ilaçlar",
+    "edit_profile:fields:buildingage:title": "Bina yaşı",
+    "edit_profile:fields:buildingdurability:title": "Bina dayanıklılığı",
+    "edit_profile:submit_btn": "Kaydet",
+    "edit_profile:validator:invalid:username": "Kullanıcı adı 3 - 20 karakter uzunluğunda olmalıdır ve yalnızca harfler, rakamlar içerebilir ve bir harfle başlamalıdır",
+    "edit_profile:validator:invalid:fullname": "Ad Soyad en az 3 karakter uzunluğunda olmalıdır",
+    "edit_profile:validator:invalid:phone": "Telefon numarası 6 - 20 karakter uzunluğunda olmalıdır ve yalnızca rakamlar içerebilir",
+    "edit_profile:validator:invalid:birth_date": "Doğum tarihi geçersiz",
+    "edit_profile:validator:invalid:blood_group": "Kan grubu geçersiz",
+    "edit_profile:validator:invalid:id_number": "Kimlik numarası geçersiz",
+    "edit_profile:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "edit_profile:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
+    "edit_profile:validator:invalid:address": "Adres geçersiz",
+    "edit_profile:validator:invalid:building_age": "Bina yaşı geçersiz",
+    "edit_profile:validator:empty:country_code": "Ülke kodu zorunludur",
+    "edit_profile:validator:username-already-in-use": "Kullanıcı adı zaten kullanımda",
+    "edit_profile:validator:unknownerror": "Kaydetme sırasında bir hata oluştu, lütfen daha sonra tekrar deneyin",
+    "edit_profile:succesfully_saved": "Profil başarıyla kaydedildi",
+    "no_connection:subtitle": "İnternet bağlantısı yok. Wi-fi veya mobil verinin açık olduğundan emin olun, ardından tekrar deneyin.",
+    "no_connection:retry_btn": "Tekrar dene",
+    "BloodGroup.zeroPositive": "0 Rh+",
+    "BloodGroup.zeroNegative": "0 Rh-",
+    "BloodGroup.aPositive": "A Rh+",
+    "BloodGroup.aNegative": "A Rh-",
+    "BloodGroup.bPositive": "B Rh+",
+    "BloodGroup.bNegative": "B Rh-",
+    "BloodGroup.abPositive": "AB Rh+",
+    "BloodGroup.abNegative": "AB Rh-",
+    "RelativeType.mother": "Anne",
+    "RelativeType.father": "Baba",
+    "RelativeType.sibling": "Kardeş",
+    "RelativeType.spouse": "Eş",
+    "RelativeType.kid": "Çocuk",
+    "RelativeType.grandchild": "Torun",
+    "RelativeType.grandmother": "Büyükanne",
+    "RelativeType.grandfather": "Büyükbaba",
+    "RelativeType.aunt": "Hala / Teyze",
+    "RelativeType.uncle": "Amca / Dayı",
+    "RelativeType.cousin": "Kuzen",
+    "RelativeType.other": "Diğer"
 }
