feat: add il ilce

--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -61,6 +61,8 @@
     "auth:signup:fields:username:title": "Kullanıcı adı",
     "auth:signup:fields:fullname:title": "Ad Soyad",
     "auth:signup:fields:birthdate:title": "Doğum tarihi",
+    "auth:signup:fields:plakakodu:title": "İl",
+    "auth:signup:fields:ilcekodu:title": "İlçe",
     "auth:signup:fields:phone:title": "Telefon numarası",
     "auth:signup:fields:bloodgroup:title": "Kan grubu",
     "auth:signup:fields:idnumber:title": "TC Kimlik No",
@@ -78,6 +80,8 @@
     "auth:signup:validator:invalid:blood_group": "Kan grubu geçersiz",
     "auth:signup:validator:invalid:id_number": "Kimlik numarası geçersiz",
     "auth:signup:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "auth:signup:validator:invalid:plakakodu": "İl geçersiz",
+    "auth:signup:validator:invalid:ilcekodu": "İlçe geçersiz",
     "auth:signup:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
     "auth:signup:validator:invalid:address": "Adres geçersiz",
     "auth:signup:validator:invalid:building_age": "Bina yaşı geçersiz",
@@ -96,6 +100,8 @@
     "edit_profile:fields:username:title": "Kullanıcı adı",
     "edit_profile:fields:fullname:title": "Ad Soyad",
     "edit_profile:fields:birthdate:title": "Doğum tarihi",
+    "edit_profile:fields:plakakodu:title": "İl",
+    "edit_profile:fields:ilcekodu:title": "İlçe",
     "edit_profile:fields:phone:title": "Telefon numarası",
     "edit_profile:fields:bloodgroup:title": "Kan grubu",
     "edit_profile:fields:idnumber:title": "TC Kimlik No",
@@ -115,6 +121,8 @@
     "edit_profile:validator:invalid:blood_group": "Kan grubu geçersiz",
     "edit_profile:validator:invalid:id_number": "Kimlik numarası geçersiz",
     "edit_profile:validator:invalid:relative_type": "Yakınlık ilişkisi geçersiz",
+    "edit_profile:validator:invalid:plakakodu": "İl geçersiz",
+    "edit_profile:validator:invalid:ilcekodu": "İlçe geçersiz",
     "edit_profile:validator:invalid:people_at_same_address": "Aynı adreste yaşayan kişi sayısı geçersiz",
     "edit_profile:validator:invalid:address": "Adres geçersiz",
     "edit_profile:validator:invalid:building_age": "Bina yaşı geçersiz",
